--- a/Lab01/style.css
+++ b/Lab01/style.css
@@ -1,9 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 .gallery {
     display: flex;
     justify-content: center;
@@ -16,5 +10,16 @@
     width: 250px;
     height: auto;
     border-radius: 10px;
-    
+}
+
+.iframe-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+}
+
+.iframe-container iframe {
+    border-radius: 10px;
 }
