--- a/Lab02/styles/index.css
+++ b/Lab02/styles/index.css
@@ -4,14 +4,13 @@
     box-sizing: border-box;
 }
 body{
-   // background-color: #3C3D37;
+   background-color: #6b6b9bff;
 }
 
 .navigation{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-color: #7773afff;
     width: 100%;
 }
 
@@ -21,55 +20,67 @@ body{
     align-items: center;
     gap: 20px;
     margin: 5px;
+    font-size: 20px;
 }
 
 li{
     list-style: none;
 }
 
-#content-header{
+a{
+    text-decoration: none;
+    color: black;
+}
+
+.menu a:hover{
+    color: #ffffffff;
+}
+
+#content_header{
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
     margin-top: 50px;
-    background-color: #9878f0ff;
+    font-size: 20px;
+    gap: 25px;
 }
 
-.content-about{
-    margin-top: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#content_header h1{
+    font-size: 36px;
+    color: #ffffffff;
 }
 
-#about{
+.content_img img{
+   width: 250px;
+   border-radius: 50%;
+   border: 4px solid #ffffffff;
+}
+
+.content_about_contacts{
     display: flex;  
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    width: fit-content;
-    padding: 10px;
-    background-color: #9878f0ff;
-    border-radius: 10px;
+    gap: 50px;
+    margin-top: 30px;
 }
 
-.content-contacts{
-    background-color: #9878f0ff;
-    padding: 10px;
-    border-radius: 10px;
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.content_about_contacts h2{
+    color: #ffffffff;
 }
 
-.contacts{
+#contacts ul{
     display: flex;
+    align-items: flex-start;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    background-color: #48405fff;
-    width: fit-content;
+    text-align: left;
+}
+
+#contacts ul li a{
+    font-size: 18px;
+}
+
+#contacts ul li a:hover{
+    color: #ffffffff;
 }
