--- a/Lab02/styles/projects.css
+++ b/Lab02/styles/projects.css
@@ -4,11 +4,25 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: #6b6b9bff;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+h1{
+    font-size: 36px;
+    color: #ffffffff;
+}
+
+
 .navegacao{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-color: #f0f0f0;
     width: 100%;
 }
 
@@ -18,8 +32,48 @@
     align-items: center;
     gap: 20px;
     margin: 5px;
+    font-size: 20px;
+}
+
+.menu a:hover{
+    color: #ffffffff;
 }
 
 .menu li{
     list-style: none;
+}
+.container_projects{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 15px;
+}
+
+.container_projects table{
+    width: 500px;
+    background-color: #f5f5f5ff;
+    border-radius: 8px;
+}
+
+.container_projects table, td{
+    border: 1px solid black;
+    font-size: 18px;
+    border-radius: 8px;
+    padding: 10px;
+}
+
+td{
+    padding: 8px;
+    text-align: left;
+}
+
+
+.container_projects table .second_row:hover{ 
+    background-color: #6b6b9bff;
+}
+
+.container_projects table .second_row:hover a{
+    color: #ffffffff;
 }
