--- a/Lab04/style.css
+++ b/Lab04/style.css
@@ -1,8 +1,41 @@
 body{
-    background-color: rgb(99, 117, 223);
+    background-color: rgb(57, 60, 71);
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.container{
+    padding-top: 20px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     gap: 20px;
+    width: 500px;
+    font-size: 20px;
+    p{
+        font-weight: bold;
+    
+    }
+}
+
+#input_number{
+    font-size: 20px;
+    border-radius: 6px;
+    text-align: center;
+}
+
+#input_btn{
+    font-size: 20px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.tentativas, #sucesso{
+    width: fit-content;
+    height: fit-content;
+    border-radius: 4px;
+    text-align: center;
+    padding: 4px;
+    font-weight: bold;
 }
