--- a/Lab05/style.css
+++ b/Lab05/style.css
@@ -3,7 +3,7 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 5px;
+    gap: 10px;
 }
 #canvas{
     margin-top: 10px;
@@ -11,5 +11,5 @@ body{
 }
 
 #canvas2{
-    border: 1px solid black;
+    background-color: rgb(175, 244, 253);
 }
